--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=Java@123
       - MYSQL_DATABASE=mylibrary
-
+    volumes:
+          - my-datavolume:/var/lib/mysql
   web:
     build: .
     image: mylibrary-api
@@ -18,3 +19,5 @@ services:
       - MYSQL_USER=root
       - MYSQL_PASSWORD=Java@123
 
+volumes:
+  my-datavolume:
